# lidalign

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: static.yml
application/SSCValidationHeligoland/: 00_TestSetup_Heligoland.ipynb  10_StarringTests_Heligoland.ipynb  20_CornerScanTest_Heligoland.ipynb  30_SSC_Scan_Evaluation.ipynb  99_Importance_of_accurate_elevation.ipynb  README.md  publication_style.mplstyle
docs/: copyandbuild.sh  generatesphinx.bat
docs/source/: ValidationCampaign.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: lidalign.rst  modules.rst
docs/source/notebooks/: marimo_application.py
docs/source/notebooks/LegacyRott/: Hard_Targeting.ipynb  Sea_Surface_Leveling.ipynb
lidalign/: SSC.py  __init__.py  hard_target_elevation_mapping.py  io.py  north_alignment.py  utils.py
